--- a/src/main/resources/fxml/home.fxml
+++ b/src/main/resources/fxml/home.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="112.0" prefWidth="446.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Home">
+<AnchorPane prefHeight="100.0" prefWidth="280.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Home">
 
-    <VBox alignment="TOP_CENTER" prefHeight="128.0" prefWidth="472.0">
+    <VBox alignment="TOP_CENTER" prefHeight="110.0" prefWidth="284.0">
         <Label text="My Life - My Future">
          <font>
             <Font size="23.0" />
@@ -22,28 +22,16 @@
          <VBox.margin>
             <Insets />
          </VBox.margin></Label>
-        <HBox>
-        <Button styleClass=".f" text="Select CSV">
+        <HBox prefHeight="47.0" prefWidth="286.0">
+        <Button styleClass=".f" text="Validate CSV" fx:id="vValidateCSV" onAction="#validateCSV">
             <HBox.margin>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </HBox.margin></Button>
-        <Button styleClass=".f" text="Validate CSV">
-            <HBox.margin>
-               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-            </HBox.margin></Button>
-        <Button styleClass=".f" text="Generate Reports">
-            <HBox.margin>
-               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-            </HBox.margin></Button>
-        <Button styleClass=".f" text="Reset">
+        <Button styleClass=".f" text="Generate Reports" fx:id="vGenerateReports" onAction="#generateReports">
             <HBox.margin>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </HBox.margin></Button>
         </HBox>
-        <Label text="Status: ">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font></Label>
       <padding>
          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
       </padding>
