--- a/src/main/resources/fxml/home.fxml
+++ b/src/main/resources/fxml/home.fxml
@@ -4,37 +4,42 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="100.0" prefWidth="280.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Home">
+<AnchorPane prefHeight="171.0" prefWidth="296.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Home">
 
-    <VBox alignment="TOP_CENTER" prefHeight="110.0" prefWidth="284.0">
+    <VBox alignment="TOP_CENTER" layoutY="-13.0" prefHeight="180.0" prefWidth="300.0">
         <Label text="My Life - My Future">
          <font>
             <Font size="23.0" />
-         </font></Label>
+         </font>
+         <VBox.margin>
+            <Insets bottom="5.0" left="10.0" right="10.0" top="10.0" />
+         </VBox.margin>
+        </Label>
+
         <Label text="The Ministo Foundation">
          <font>
             <Font size="14.0" />
          </font>
          <VBox.margin>
-            <Insets />
-         </VBox.margin></Label>
-        <HBox prefHeight="47.0" prefWidth="286.0">
-        <Button styleClass=".f" text="Validate CSV" fx:id="vValidateCSV" onAction="#validateCSV">
-            <HBox.margin>
-               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-            </HBox.margin></Button>
-        <Button styleClass=".f" text="Generate Reports" fx:id="vGenerateReports" onAction="#generateReports">
-            <HBox.margin>
-               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-            </HBox.margin></Button>
-        </HBox>
+            <Insets bottom="10.0" left="10.0" right="10.0" />
+         </VBox.margin>
+       </Label>
+
+        <Button fx:id="vValidateCSV" onAction="#validateCSV" prefHeight="30.0" prefWidth="128.0" styleClass=".f" text="Validate CSV">
+         <VBox.margin>
+            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+         </VBox.margin></Button>
+        <Button fx:id="vGenerateReports" onAction="#generateReports" prefHeight="30.0" prefWidth="128.0" styleClass=".f" text="Generate Reports">
+         <VBox.margin>
+            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+         </VBox.margin></Button>
       <padding>
          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
       </padding>
+
     </VBox>
 
 </AnchorPane>
